<resources>
    <string name="app_name" translatable="false">EggManager</string>
    <string name="title_activity_about">\u00DCber EggManager</string>
    <string name="title_activity_new_entity">Tagesbilanz</string>
    <string name="title_activity_database_import_export">Datensicherung</string>
    <string name="title_activity_filter">Daten filtern</string>
    <string name="title_activity_data_check">Datenprüfung</string>
    <string name="action_filter">Filtern</string>
    <string name="action_save">Speichern</string>
    <string name="action_delete_database">Daten löschen</string>
    <string name="action_data_check">Datenprüfung</string>
    <string name="snackbar_error_loading_data_from_database">Fehler beim Lesen der Daten aus der Datenbank. Bitte den Fehler an den Entwickler melden.</string>
    <string name="snackbar_no_external_storage">Kein externer Speicher im Gerät verfügbar. Bitte legen Sie einen externen Speicher in das Gerät ein.</string>
    <string name="snackbar_permission_ext_storage_granted">Zugriff auf externen Speicher gewährt. Sie können die Daten jetzt auf dem Gerät sichern.</string>
    <string name="snackbar_permission_ext_storage_denied">Zugriff auf externen Speicher verweigert. Backup kann nicht durchgeführt werden.</string>
    <string name="snackbar_data_imported_successfully">Daten für %1$d Tage erfolgreich importiert.</string>
    <string name="snackbar_no_data_to_filter">Es sind noch keine Daten vorhanden</string>
    <string name="snackbar_error_delete_backup">Fehler beim Löschen der Datensicherung</string>
    <string name="snackbar_import_backup_cancelled">Import abgebrochen</string>
    <string name="snachkbar_database_not_filtered">"Daten nicht gefiltert"</string>
    <string name="snackbar_database_filtered_by">"Daten nach %1$s gefiltert"</string>
    <string name="text_sort_ascending">Aufsteigend</string>
    <string name="text_sort_descending">Absteigend</string>
    <string name="button_save" translatable="false">@string/action_save</string>
    <string name="entry_not_added">Kein Eintrag erstellt</string>
    <string name="new_entity_saved">Neuer Eintrag gespeichert</string>
    <string name="changes_saved">Änderungen gespeichert</string>
    <string name="changes_not_saved">Änderungen nicht übernommen</string>
    <string name="summary">Zusammenfassung</string>
    <string name="number_eggs_collected_empty">Anzahl abgenommener Eier fehlt</string>
    <string name="text_empty_recyclerview">Keine Daten vorhanden.\nKlicken Sie dazu auf das + um Daten einzutragen.</string>
    <string name="text_recyclerview_not_visible">Die Daten wurden ausgeblendet</string>
    <string name="text_no_date">Kein Datum</string>
    <string name="text_formatted_num_entries">%1$d Einträge</string>
    <string name="txt_backup">Sichern Sie Ihre Daten in einer Datei auf dem Gerät. Gespeicherte Daten können Sie bei Bedarf wieder laden.</string>
    <string name="txt_no_backup_files">Es wurde noch keine Datensicherung erstellt.\nKlicken Sie auf dieses Feld oder das + um eine neue Datensicherung auf dem Gerät zu erstellen.</string>
    <string name="heading_found_backups">Vorhandene Datensicherungen</string>
    <string name="dialog_button_backup_create">Erstellen</string>
    <string name="dialog_button_cancel">Abbruch</string>
    <string name="notification_import_title_prefix">Import des Backups \"%1$s\"</string>
    <string name="notification_import_finished">Import abgeschlossen</string>
    <string name="notification_importing_backup">Backup wird eingelesen</string>
    <string name="notification_backup_create_title">Datensicherung</string>
    <string name="notification_backup_create_string_formatter">Datensicherung \"%1$s\" wird erstellt…</string>
    <string name="notification_backup_create_finished_text">Datensicherung erstellt</string>
    <string name="notification_backup_created">Datensicherung \"%1$s\" mit %2$d Einträgen erstellt.</string>
    <string name="notification_backup_import_finished">Import abgeschlossen.\n%1$d Einträge importiert.</string>
    <string name="symbol_price_per_piece" translatable="false">&#8364;/St.</string>
    <string name="alter_title_overwrite_entry">Eintrag überschreiben</string>
    <string name="alert_msg_overwrite_entry">Für den ausgewählten Tag ist bereits ein Eintrag vorhanden. Soll dieser Eintrag überschrieben werden?</string>
    <string name="alter_msg_invalid_price_per_egg">Der eingegebene Preis pro Ei ist ungültig</string>
    <string name="menu_action_apply">Anwenden</string>
    <string name="subheading_years">Jahr</string>
    <string name="subheading_month">Monat</string>
    <string name="menu_action_remove_filter">Filter entfernen</string>
    <string name="from">von</string>
    <string name="to">bis</string>
    <string name="data_check_no_data_missing">Im ausgwählten Zeitraum sind für alle Tage Einträge vorhanden</string>
    <string name="data_check_info">Im ausgewählten Zeitraum sind für %1$d Tage keine Einträge vorhanden</string>
    <string name="content_description_icon_success">Symbol für eine erfolgreiche Prüfung</string>
    <string name="txt_title_eggs_collected">Abgenommene Eier</string>
    <string name="txt_title_eggs_sold">Verkaufte Eier</string>
    <string name="tab_name_collected">abgenommen</string>
    <string name="tab_name_sold">verkauft</string>
    <string name="chart_no_data_text">Keine Daten vorhanden</string>
    <string name="menu_chart_style">Diagramm Typ</string>
    <string name="content_description_chart_icon" translatable="false">chart icon</string>
    <string name="dialog_title_chart_style" translatable="false">@string/menu_chart_style</string>
    <string name="chart_style_bar">Balkendiagramm</string>
    <string name="chart_style_line">Liniendiagramm</string>
    <string name="title_sorting_dialog">Daten sortieren</string>
    <string name="txt_option_delete">Löschen</string>
    <string name="txt_option_import">Importieren</string>
    <string name="dialog_title_delete_database">Alle Einträge entfernen</string>
    <string name="dialog_title_delete_item">Eintrag löschen</string>
    <string name="dialog_message_delete_item">"Möchten Sie den Eintrag löschen?"</string>
    <string name="dialog_import_backup_text_cannot_load">Die Datensicherung \"%1$s\" kann nicht geladen werden.</string>
    <string name="dialog_import_backup_text_no_items">Die Datensicherung enthält keine Einträge.</string>
    <string name="dialog_import_backup_text_wo_duplicates">Die Datensicherung enthält Daten für %1$d Tage.</string>
    <string name="dialog_import_backup_text_w_duplicates">Die Datensicherung enthält %1$d Einträge.\nDavon sind für %2$d Tage bereits Einträge in der Datenbank vorhanden.</string>
    <string name="dialog_import_backup_check_box_overwrite_existing">Vorhandene Einträge überschreiben</string>
    <string name="dialog_import_backup_title">Datensicherung importieren</string>
    <string name="dialog_import_backup_question">Sollen die Einträge aus der Datensicherung jetzt importiert werden?</string>
    <string name="hint_eggs_collected">gelegt</string>
    <string name="hint_eggs_sold">verkauft</string>
    <string name="hint_price_per_egg">Preis pro Ei</string>
    <string name="hint_money_earned">Erlös</string>
    <string name="btn_text_ok" translatable="false">OK</string>
    <string name="btn_text_cancel">Abbrechen</string>
    <string name="euro_symbol" translatable="false">&#8364;</string>
    <string name="transition_txtv_eggs_collected" translatable="false">textEggsCollected</string>
    <string name="transition_txtv_eggs_sold" translatable="false">textEggsSold</string>
    <string name="transition_imgv_eggs_collected" translatable="false">imageEggsCollected</string>
    <string name="transition_imgv_eggs_sold" translatable="false">imageEggsSold</string>
    <string name="icon_credits_header" translatable="false">Credits:</string>
    <string name="icon_credits_flaticon" translatable="false">Icons made by Freepik and Gregor Cresnar from www.flaticon.com</string>
    <string name="app_developer">Entwickler: Mathias Ferstl</string>
    <string name="nav_header_title" translatable="false">EggManager</string>
    <string name="nav_header_subtitle" translatable="false">https://mjferstl.github.io/</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="menu_main_database">Übersicht</string>
    <string name="menu_diagrams">Statistik</string>
    <string name="menu_about">Über EggManager</string>
    <string name="menu_backup_data">Datensicherung</string>
    <string name="menu_settings">Einstellungen</string>
    <string name="january">Januar</string>
    <string name="february">Februar</string>
    <string name="march">März</string>
    <string name="april">April</string>
    <string name="may">Mai</string>
    <string name="june">Juni</string>
    <string name="july">Juli</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">Oktober</string>
    <string name="november">November</string>
    <string name="december">Dezember</string>
    <string name="content_description_icon_calendar">Kalender Icon</string>
    <string name="content_description_button_next_day">Button zum Ändern des Datums auf den Folgetag</string>
    <string name="content_description_button_previous_day">Button zum Ändern des Datums auf den Vortag</string>
    <string name="content_description_icon_eggs_collected">Icon für die abgenommenen Eier</string>
    <string name="content_description_icon_eggs_sold">Icon für die verkauften Eier</string>
    <string name="content_description_icon_price_per_egg">Icon für den Preis pro Ei</string>
    <string name="content_description_button_add">Button zum Hinzufügen eines Eintrags</string>
    <string name="content_description_empty" translatable="false" />
    <string name="content_description_icon_sd_card">Icon für die Speicherkarte</string>
    <string name="content_description_button_expand_collapse">Button zum Auf- und Zuklappen der fehlenden Einträge</string>
    <string name="content_description_icon_error_success">Icon, welches das Ergebnis der Datenprüfung für einen Monat bewertet</string>
    <string name="content_description_icon_money">Icon für den Erlös</string>
    <string name="title_activity_settings">Einstellungen</string>
    <string name="settings_header_user">Nutzer</string>
    <string name="settings_header_default_value">Standardwerte</string>
    <string name="settings_title_username">Benutzername</string>
    <string name="settings_title_price_per_egg">Preis pro Ei in Cent</string>
    <string name="preferences_key_pricePerEgg_cent" translatable="false">pricePerEgg</string>
    <string name="preferences_pricePerEgg_cent_default" translatable="false">50</string>
    <string name="preferences_key_username" translatable="false">username</string>
    <string name="preferences_username_default" translatable="false">default_user</string>
    <string name="preference_key_backup_import_notifications" translatable="false">openNotificationSettings</string>
    <string name="preference_title_backup_import_notification">Datensicherung</string>
    <string name="preference_summary_backup_import_notification">Öffnet die Benachrichtigungseinstellungen für das Laden von Datensicherungen</string>
    <string name="notification_channel_name_import_backup">Datensicherung laden</string>
    <string name="notification_channel_description_import_backup">Import von EggManager Datensicherungen</string>
    <string name="txt_example_day_month">02. Januar</string>
    <string name="txt_year">Jahr</string>
    <string name="dialog_title_new_backup">Neue Datensicherung</string>
    <string name="dialog_text_enter_backup_name">Geben Sie einen Namen für die Datensicherung ein</string>
    <string name="dialog_backup_hint_name">Name der Datensicherung</string>
</resources>