<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_header_user">

        <EditTextPreference
            app:key="@string/preferences_key_username"
            app:title="@string/settings_title_username"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_header_default_value">

        <EditTextPreference
            app:defaultValue="@string/preferences_pricePerEgg_cent_default"
            app:key="@string/preferences_key_pricePerEgg_cent"
            app:title="@string/settings_title_price_per_egg"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="Benachrichtigungen">

        <Preference
            app:key="@string/preference_key_backup_import_notifications"
            app:title="@string/preference_title_backup_import_notification"
            app:summary="@string/preference_summary_backup_import_notification" />

    </PreferenceCategory>

</PreferenceScreen>