<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/nav_group_fragments"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main_database"
            android:icon="@drawable/ic_storage_black_24dp"
            android:title="@string/menu_main_database" />
        <item
            android:id="@+id/nav_diagrams"
            android:icon="@drawable/ic_statistics"
            android:title="@string/menu_diagrams" />
        <item
            android:id="@+id/nav_backup"
            android:icon="@drawable/ic_save_black_24dp"
            android:title="@string/menu_backup_data" />
    </group>

    <group
        android:id="@+id/nav_group_general"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/menu_about" />
    </group>

</menu>
