<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="mfdevelopement.eggmanager.fragments.DatabaseFragment">
    <item
        android:id="@+id/action_data_filter"
        android:orderInCategory="99"
        android:title="@string/action_filter"
        android:icon="@drawable/ic_filter_list_black_24dp"
        app:showAsAction="ifRoom"
        app:iconTint="@color/white"/>
    <item
        android:id="@+id/action_data_sort"
        android:orderInCategory="100"
        android:title=""
        android:icon="@drawable/ic_sort_black_24dp"
        app:showAsAction="ifRoom"
        app:iconTint="@color/white"/>
    <item
        android:id="@+id/action_completeness_check"
        android:orderInCategory="101"
        android:title="@string/action_data_check"
        android:icon="@drawable/ic_list_check_black_24dp"
        app:showAsAction="ifRoom"
        app:iconTint="@color/white"/>
    <item
        android:id="@+id/action_delete_database"
        android:orderInCategory="102"
        android:title="@string/action_delete_database"
        android:icon="@drawable/ic_delete_black_24dp"
        app:showAsAction="ifRoom"
        app:iconTint="@color/white" />
</menu>
