<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/large_padding"
    android:layout_marginTop="@dimen/large_padding"
    android:layout_marginEnd="@dimen/large_padding"
    android:layout_marginBottom="@dimen/large_padding"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.NewEntityActivity"
    tools:showIn="@layout/activity_new_entity">

    <LinearLayout
        android:id="@+id/linLay_new_entity_datepicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linLay_new_entity_amount_eggs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgv_calendar"
            style="@style/basic_icon"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_date_range_black_24dp"/>

        <TextView
            android:id="@+id/txtv_new_entity_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:paddingStart="@dimen/small_padding"
            android:paddingTop="@dimen/small_padding"
            android:paddingEnd="@dimen/small_padding"
            android:layout_marginEnd="@dimen/LARGE_padding"
            android:paddingBottom="@dimen/small_padding"
            android:text="So. 08.09.2020"
            android:textColor="@color/main_text_color"
            android:textSize="@dimen/textAppearanceHeadline6"/>

        <ImageButton
            android:id="@+id/imgbtn_date_backward"
            style="@style/basic_button"
            android:paddingStart="@dimen/large_padding"
            android:paddingEnd="@dimen/large_padding"
            android:src="@drawable/ic_arrow_left_black_24dp"/>

        <ImageButton
            android:id="@+id/imgbtn_date_foreward"
            style="@style/basic_button"
            android:paddingStart="@dimen/large_padding"
            android:paddingEnd="@dimen/large_padding"
            android:src="@drawable/ic_arrow_right_black_24dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linLay_new_entity_amount_eggs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_padding"
        android:layout_marginBottom="@dimen/large_padding"
        android:focusableInTouchMode="true"
        android:orientation="horizontal"
        android:baselineAligned="false"
        app:layout_constraintBottom_toTopOf="@+id/linLay_new_entity_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linLay_new_entity_datepicker">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgv_eggs_fetched"
                style="@style/new_entity_icon"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/large_padding"
                android:src="@drawable/ic_egg_nest"
                android:transitionName="imageEggsCollected"/>

            <EditText
                android:id="@+id/etxt_fetched_eggs"
                style="@style/new_entity_edit_text"
                android:hint="@string/hint_eggs_collected"
                android:singleLine="true"
                android:transitionName="@string/transition_txtv_eggs_collected"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgv_eggs_icon"
                style="@style/new_entity_icon"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/large_padding"
                android:src="@drawable/ic_eggs_black"
                android:transitionName="@string/transition_imgv_eggs_sold"/>

            <EditText
                android:id="@+id/etxt_sold_eggs"
                style="@style/new_entity_edit_text"
                android:hint="@string/hint_eggs_sold"
                android:transitionName="@string/transition_txtv_eggs_sold"/>

        </LinearLayout>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linLay_new_entity_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_padding"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linLay_new_entity_amount_eggs">

        <ImageView
            android:id="@+id/imgv_egg_price"
            style="@style/new_entity_icon"
            android:src="@drawable/ic_egg_price_48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/etxt_egg_price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@+id/etxt_egg_price"
            style="@style/new_entity_edit_text"
            android:digits="1234567890,."
            android:hint="@string/hint_price_per_egg"
            android:inputType="numberDecimal"
            android:maxLength="4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/txtv_new_entity_currency"
            app:layout_constraintStart_toEndOf="@+id/imgv_egg_price"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/txtv_new_entity_currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/euro_symbol"
            android:textColor="@color/main_text_color"
            android:textSize="@dimen/textAppearanceHeadline6"
            app:layout_constraintBaseline_toBaselineOf="@+id/etxt_egg_price"
            app:layout_constraintStart_toEndOf="@+id/etxt_egg_price"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>


